# live-bootcamp-project-proxy

./: compose.override.yml  compose.yml
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: lib.rs  main.rs
auth-service/src/dtos/: mod.rs  signup_request.rs
auth-service/src/routes/: mod.rs  signup.rs  verify_mfa.rs
auth-service/tests/: helpers.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
proxy/: Dockerfile
proxy/conf.d/: default.conf
