[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
simple_logger = "5.0.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }